2005-03-07 Alain Magloire
	Fix for 87230: base on  Jayaprakash ideas/patch
	On HP statck-list-frames answer contain not kosher strings
	* mi/org/eclipse/cdt/debug/mi/core/output/MIParser.java

2005-02-01 Alain Magloire
	Part of Fix for PR 84165
	We check in the expression is a number and
	add a "*" for address watchpoint
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java

2005-01-20 Mikhail Khodjaiants
	Fix for bug 83355: The disable/enable breakpoints durning debugging acts weird.
	* cdi\org\eclipse\cdt\debug\mi\core\cdi\model\Breakpoint.java
	* cdi\org\eclipse\cdt\debug\mi\core\cdi\BreakpointManager.java

2005-01-13 Alain Magloire
	PR 82764 Fix the the type parsing.
	* mi/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java

2005-01-10 Mikhail Khodjaiants
	PR 82601 changes to the memory block interface
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/ICDIMemoryBlock.java
	* mi/org/eclipse/cdt/debug/mi/core/output/MIMemory.java

2005-01-10 Alain Magloire
	Fix for PR 82506
	* mi/org/eclipse/cdt/debug/mi/core/MISession.java
	* mi/org/eclipse/cdt/debug/mi/core/output/MIParser.java

2004-12-20 Alain Magloire
	Fix for PR 81019 for MacOsX
	* mi/org/eclipse/cdt/debug/mi/core/output/MIVarListChildrenInfo.java

2004-11-26 Alain Magloire
	Make the deferred breakpoint on by default.
	* cdi/org/eclipose/cdt/debug/mi/core/cdi/SharedLibraryManager.java

2004-11-26 Alain Magloire
	Final fix for PR 79583
	* cdi/org/eclipose/cdt/debug/mi/core/cdi/EventManager.java
	* cdi/org/eclipose/cdt/debug/mi/core/cdi/SharedLibraryManager.java

2004-11-26 Alain Magloire
	Final fix for PR 79452
	* cdi/org/eclipose/cdt/debug/mi/core/cdi/BreapointManager.java

2004-11-26 Alain Magloire
	Fix for PR 79582
	* src/org/eclipse/cdt/debug/mi/core/CygwinGDBCDIDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/GDBServerCDIDebugger.java

2004-11-24 Alain Magloire
	Make the terminate() more responsive when gdb is shuting down.
	See long discussion part of the 77435 fixes and 40087.
	