@@ -63,15 +63,4 @@ public interface IMIConstants
 	 * The default value of the for <code>PREF_SHARED_LIBRARIES_AUTO_REFRESH</code> property
 	 */
 	public static final boolean DEF_PREF_SHARED_LIBRARIES_AUTO_REFRESH = true;
-
-	/**
-	 * Boolean preference controlling whether the register manager will be
-	 * refreshed every time when the execution of program stops.
-	 */
-	public static final String PREF_REGISTERS_AUTO_REFRESH = PLUGIN_ID + ".Registers.auto_refresh"; //$NON-NLS-1$
-
-	/**
-	 * The default value of the for <code>PREF_REGISTERS_AUTO_REFRESH</code> property
-	 */
-	public static final boolean DEF_PREF_REGISTERS_AUTO_REFRESH = true;
 }
