@@ -14,5 +14,4 @@ MIPreferencePage.1=Communication
 MIPreferencePage.2=&Debugger timeout (ms):
 MIPreferencePage.3=&Launch timeout (ms):
 MIPreferencePage.4=The valid value range is [{0},{1}].
-MIPreferencePage.5=Automatically refresh registers
-MIPreferencePage.6=Automatically refresh shared libraries
+MIPreferencePage.6=Automatically refresh modules
