@@ -1,2 +1,1 @@
-OptionsPropertyPage.0=Automatically refresh registers
-OptionsPropertyPage.1=Automatically refresh shared libraries
+OptionsPropertyPage.1=Automatically refresh modules
